fixed main margins and overflow in x

--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@
     color: white;
     text-align: center;
 }
-
+/* DISEÑO */
+html,body,main{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
 /* SELECTORES */
 body{
     background-image: url("./img/fondo.png");
@@ -12,6 +17,10 @@ body{
     background-repeat: repeat;
     width: 100%;
     height: 100%;
+}
+
+section{
+    width: 100%;
 }
 
 /* CLASES E ID */
@@ -52,11 +61,7 @@ a#fixedtexto{
     text-decoration-color: red;
     
 
-}                                                                               
-nav{
-  width:100%;
-  height:40px;                                                                                                  
-}                                                                                       
+}
 #total{
     margin-right: 20px;
     padding: 10px;
@@ -95,6 +100,15 @@ nav{
     width: 100%;
     height: 100%;
 }
+
+#fotoCoche{
+    padding-top: 35px;
+}
+nav{
+  width:100%;
+  height:40px;                                                                                                  
+}                                                                                       
+
 p.titulos{
     font-family: arial;
 }
